Basic calc functioning
A lot of commented code to check and remove.
The floating point (period button) doesn't work, the code handling it is still commented.

The backspace button do not work and the code is yet to be written from scratch.

--- a/calc/index.html
+++ b/calc/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Js Calculator</title>
     <meta name="Author" content="" />
-    <!--    <link rel="stylesheet" href="CSS/style.css" type="text/css">-->
+    <link rel="stylesheet" href="CSS/style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
 
 </head>
@@ -15,10 +15,6 @@
     <h1>Calculator</h1>
 
     <div id="calc-body">
-
-        <!--        <input class="display" type="text" lang="en-150" placeholder="0" step="any">-->
-
-        <!--<input class="display" type="number" placeholder="0">-->
 
         <div class="display" id="display">0</div>
 
@@ -46,17 +42,6 @@
         <div class="btn equal" id="equal">&#61;</div>
 
     </div>
-<h3>First display</h3>
-    <div class="notebook" id="notebook" style="border: solid; margin: 10px; min-height: 30px;"></div>
-    <h3>Keyboard</h3>
-    <div class="notes" id="notes" style="border: solid; margin: 10px; min-height: 30px;">
-        <div class="letter">A</div>
-        <div class="letter">B</div>
-        <div class="letter">C</div>
-        <div class="letter">.</div>
-    </div>
-<h3>Second display</h3>
-    <div id="second-display" style="border: solid; margin: 10px; min-height: 30px;"></div>
 
     <script src="JS/script.js"></script>
 </body>
